--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Getting started with Webpack",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server ./index.js",
+    "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode  production"
   },
   "repository": {
